# auto-api-startup

./: pyproject.toml
.devcontainer/: devcontainer.json
prog/: main.py
